--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                         correct.style.backgroundColor = "";
                         feedback.innerHTML = "";
                     }else{
+                        console.log(correct.style.backgroundColor);
                         correct.style.backgroundColor = "green";
                         feedback.innerHTML = "Correct!";
                     }
