--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         correct.style.backgroundColor = "";
                         feedback.innerHTML = "";
                     }else{
-                        console.log(correct.style.backgroundColor);
+                        console.log(correct);
                         correct.style.backgroundColor = "green";
                         feedback.innerHTML = "Correct!";
                     }
